--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ ul {
   align-items: center;
   height: 60px;
   padding: 20px 0;
-  margin: 10px;
+  margin: 20px;
 }
 
 .nav-brand {
@@ -90,6 +90,7 @@ ul {
   right: 30px;
   z-index: 2;
   display: none;
+  margin-top: 10px;
 }
 
 /* SHOWCASE */
