--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ ul {
   right: 30px;
   z-index: 2;
   display: none;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 /* SHOWCASE */
@@ -384,7 +384,7 @@ ul {
 
 @media (max-width: 500px) {
   .nav-main{
-    margin: 0 auto;
+    margin: 20px auto;
   }
   .showcase {
     grid-template-columns: 1fr;
