--- a/styles.css
+++ b/styles.css
@@ -237,7 +237,7 @@ ul {
 
 /* Follow */
 .social {
-  margin: 50px;
+  margin: 50px 0;
 }
 .wc{
   color: #ffffff;
@@ -276,7 +276,6 @@ ul {
 .footer-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
   align-items: center;
   text-align: center;
   color: #ffffff;
@@ -306,7 +305,6 @@ ul {
   padding: 20px 0;
   text-align: center;
   font-size: 1rem;
-  padding-bottom: 20px;
 }
 
 /* Mobil */
