--- a/styles.css
+++ b/styles.css
@@ -262,12 +262,7 @@ ul {
 }
 
 /* Links */
-.footer-links {
-  background: #2f3640;
-  color: #ffffff;
-  font-size: 12px;
-  padding: 35px 0;
-}
+
 #wc{
   color: #ffffff;
 }
@@ -280,6 +275,7 @@ ul {
   text-align: center;
   color: #ffffff;
   font-size: 16px;
+  background-color: var(--grisCNA);
 }
 
 .footer-container a{
@@ -294,12 +290,12 @@ ul {
   margin-left: 100px;
 }
 
-.footer-links li {
-  line-height: 2.8;
+.footer-container li {
+  line-height: 2;
 }
 
 .footer {
-  background: #2f3640;
+  background: var(--grisCNA);
   color: #ffffff;
   font-size: 12px;
   padding: 20px 0;
@@ -371,7 +367,8 @@ ul {
     width: 80%;
   }
 
-  .footer-links .footer-container {
+ .footer-container {
+    margin-top: 50px;
     grid-template-columns: repeat(1, 1fr);
   }
   .footer-container ul{
