--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,13 @@ ul {
   text-align: center;
   margin: 20px;
 }
+.showcase .ie{
+  text-align: left;
+}
+.showcase ul{
+  list-style:disc ;
+  margin-left: 50px;
+}
 .showcase {
   width: 100%;
   height: 550px;
@@ -142,7 +149,63 @@ ul {
   height: 400px;
 }
 
+/* Formulario */
+.formulario{
+  margin: 0 auto;
+  width: 100%;
 
+}
+
+
+.form{
+  width: 100%;
+  margin: 0 auto;
+  padding: 30px 0;
+  background-color: var(--colorCNA);
+  border-radius: 4px;
+  box-shadow: 7px 13px 37px #000;
+  text-align: left;
+  font-weight: bold;
+  color: var(--grisCNA);
+
+  
+}
+.form h3{
+  margin-bottom: 24px;
+  font-weight: bolder;
+  font-size: 24px;
+}
+.form input,textarea{
+
+  border:1px solid var(--grisCNA) ;
+  border-radius: 4px;
+}
+.controlstn{
+  width: 280px;
+  height: 30px; 
+}
+.controlstp{
+  width:80px;
+  height: 30px;
+}
+
+.form td{
+  height: 40px;
+}
+.form table{
+  margin: 0 auto;
+  width: 80%;
+  align-items: center;
+}
+.form textarea{
+  align-items: center;
+  width: 550px;
+  
+}
+
+#right{
+  float: right;
+}
 /* News Cards */
 .news-cards {
   display: grid;
