--- a/styles.css
+++ b/styles.css
@@ -153,22 +153,30 @@ ul {
 .formulario{
   margin: 0 auto;
   width: 100%;
-
+  box-shadow: 0px 1px 10px var(--grisCNA);
 }
-
-
+.section-form{
+  display: flex;
+  background-color: var(--colorCNA);
+}
+.sec{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  border-top:  2px solid  rgba(0, 0, 0, 0.5);
+  background-color: #ffffff;
+  color: var(--grisCNA);
+  padding: 50px auto;
+  margin: 20px auto;
+}
 .form{
-  width: 100%;
-  margin: 0 auto;
-  padding: 30px 0;
+  width: 80%;
+  margin: 20px auto;
+  padding: 30px auto;
   background-color: var(--colorCNA);
   border-radius: 4px;
-  box-shadow: 7px 13px 37px #000;
   text-align: left;
   font-weight: bold;
   color: var(--grisCNA);
-
-  
 }
 .form h3{
   margin-bottom: 24px;
@@ -176,10 +184,27 @@ ul {
   font-size: 24px;
 }
 .form input,textarea{
-
   border:1px solid var(--grisCNA) ;
   border-radius: 4px;
 }
+.box1 {
+  grid-column-start: 1;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  margin: 20px 0;
+}
+.boxend{
+  grid-column-start:1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  
+}
+.box2,
+.box3{
+  margin: 10px 0;
+}
+
 .controlstn{
   width: 280px;
   height: 30px; 
@@ -189,21 +214,14 @@ ul {
   height: 30px;
 }
 
-.form td{
-  height: 40px;
-}
-.form table{
-  margin: 0 auto;
-  width: 80%;
-  align-items: center;
-}
 .form textarea{
   align-items: center;
-  width: 550px;
-  
+  width: 250px;
 }
-
-#right{
+.grid{
+  display: grid;
+}
+.right{
   float: right;
 }
 /* News Cards */
@@ -438,6 +456,14 @@ ul {
     text-align: center;
     margin-left: 0;
   }
+  .section-form,
+  .sec{
+    grid-template-columns: 1fr;
+  }
+  .btn-grid{
+    display: grid;
+    text-align: center;
+  }
 }
 
 @media (max-width: 500px) {
@@ -474,5 +500,30 @@ ul {
     text-align: center;
     margin: 0 auto;
   }
- 
+
+  .section-form,
+  .sec{
+    grid-template-columns: 1fr;
+  }
+  .form textarea{
+    align-items: center;
+    width: 350px;
+  }
+  .box1{
+    margin: 20px auto;
+  }
+  .boxend{
+    text-align: center;
+    display: grid;
+  }
+
+
+  .box2,
+  .box3{
+    display: grid;
+  }
+  .btn-grid{
+    text-align: center;
+    display: grid;
+  }
 }
