--- a/styles.css
+++ b/styles.css
@@ -215,6 +215,17 @@ ul {
   grid-row-end: 3;
   
 }
+.box{
+    margin: 20px auto;
+}
+.box4{
+  grid-column-start:1;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 5;
+  margin: 0 30px;
+  border: 1px solid #575656;
+}
 .box2,
 .box3{
   margin: 10px 0;
@@ -229,15 +240,21 @@ ul {
   height: 30px;
 }
 
-.form textarea{
+.textarea{
   align-items: center;
   width: 250px;
 }
 .grid{
   display: grid;
+  margin: 10px 0;
 }
 .right{
   float: right;
+}
+.contactt{
+  width: 100%;
+  height: 250px;
+  border-radius: 10px;
 }
 /* News Cards */
 .news-cards {
@@ -483,6 +500,19 @@ ul {
   .form h4{
     text-align: center;
   }
+  .contactt{
+    width: 300px;
+    height: 150px;
+  }
+  .box4{
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 4;
+    margin: 0 55px;
+  }
+  .box{
+    display: grid;
+  }
 }
 
 @media (max-width: 500px) {
@@ -539,6 +569,10 @@ ul {
 
   .box2,
   .box3{
+    display: grid;
+  }
+
+  .box4,.box{
     display: grid;
   }
   .btn-grid{
