--- a/styles.css
+++ b/styles.css
@@ -245,8 +245,16 @@ ul {
 
 .textarea{
   align-items: center;
-  width: 250px;
+  width: 300px;
+  height: 80px;
 }
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] { -moz-appearance:textfield; }
 .grid{
   display: grid;
   margin: 10px 0;
